@@ -1,3 +1,7 @@
+2004-09-26  Todd Berman  <tberman@off.net>
+
+	* Gui/Components/SdMenu.cs: this should fix i18n for menus
+
 2004-09-25  Peter Johanson  <latexer@gentoo.org>
 
 	* Gui/Components/SdMenuCheckBox.cs: Workaround released gtk# 1.0.2
